# cars_factory

./: .gitignore  Bike.cpp  Bike.h  BikeBasket.cpp  BikeBasket.h  BikeFactory.cpp  BikeFactory.h  BikeSpecification.cpp  BikeSpecification.h  CMakeLists.txt  Car.cpp  Car.h  CarFactory.cpp  CarFactory.h  CarSpecification.cpp  CarSpecification.h  MotorVehicle.cpp  MotorVehicle.h  Motorbike.cpp  Motorbike.h  MotorbikeFactory.cpp  MotorbikeFactory.h  MotorbikeSpecification.cpp  MotorbikeSpecification.h  SalesDepartment.cpp  SalesDepartment.h  Sprayer.cpp  Sprayer.h  UsedMotorVehicleDealer.cpp  UsedMotorVehicleDealer.h  Vehicle.cpp  Vehicle.h  VehicleFactory.cpp  VehicleFactory.h  VehicleSpecification.cpp  VehicleSpecification.h  main.cpp
project_description/: opis.txt
test_files/: stdin-create-new-salesdepartment.txt  stdin-dealer.txt  stdin-drive-motorbike.txt  stdin-sales-department.txt  stdin-save-vehicle.txt  stdin-sprayer.txt  stdin-templates.txt
